目录界面更新

--- a/oldFight/res/layout/menu.xml
+++ b/oldFight/res/layout/menu.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="40dp"
-        android:text="11111"
+        android:text="@string/normalText"
         />
     
    <TextView
@@ -32,7 +32,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
-       android:text="11111"
+       android:text="@string/jiejiText"
        />
         
     <TextView
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="40dp"
-        android:text="11111"
+        android:text="@string/jishiText"
         />
             
 
