--- a/oldFight/res/layout/menu.xml
+++ b/oldFight/res/layout/menu.xml
@@ -3,46 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:layout_centerHorizontal="true"
-    android:background="#EEEE00"
+    android:background="#FFEFD5"
     >
 
-    <ImageView
-        android:id="@+id/titleImg"
-        android:layout_marginTop="40dp"
+  <TextView
+        android:id="@+id/title"
+        android:gravity="center"
+        android:textColor="#FF7F24"
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/gametop" />
-    
+        android:textSize="60sp"
+        android:text="@string/app_name"/>
+  
     <TextView
         android:id="@+id/normal"
         android:gravity="center"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/titleImg"
+        android:textColor="#FF7F24"
+        android:layout_marginTop="70dp"
+        android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:text="@string/normalText"
         />
     
    <TextView
        android:id="@+id/jieji"
        android:gravity="center"
+       android:textColor="#FF7F24"
        android:layout_marginTop="40dp"
-       android:layout_below="@+id/normal"
+       android:layout_below="@id/normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:textSize="40dp"
+       android:textSize="30sp"
        android:text="@string/jiejiText"
        />
         
     <TextView
         android:id="@+id/jishi"
         android:gravity="center"
+        android:textColor="#FF7F24"
         android:layout_marginTop="40dp"
-        android:layout_below="@+id/jieji"
+        android:layout_below="@id/jieji"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:text="@string/jishiText"
         />
             
